# ExamGenerator

./: .clang-format  .gitignore  CMakeLists.txt  License  README.md
LaTeX/: examDoc.tex
app/: CMakeLists.txt
app/LaTeX/: examDoc.tex
app/examGen/: GenAPI.cpp  GenAPI.h  GenCodeText.cpp  GenCodeText.h  GenExam.cpp  GenExam.h  GenExams.cpp  GenExams.h  GenHeader.cpp  GenHeader.h  GenImage.cpp  GenImage.h  GenItem.cpp  GenItem.h  GenNull.cpp  GenNull.h  GenOption.cpp  GenOption.h  GenOptions.cpp  GenOptions.h  GenRandom.h  GenSelector.cpp  GenSelector.h  GenSolution.cpp  GenSolution.h  GenStem.cpp  GenStem.h  GenText.cpp  GenText.h  ICompositeGenerator.cpp  ICompositeGenerator.h  IGenerator.cpp  IGenerator.h  ILeafGenerator.cpp  ILeafGenerator.h  LaTeX.cpp  LaTeX.h  RandomProfile.cpp  RandomProfile.h
app/examGenC/: GenCFactory.cpp  GenCFactory.h  GenLogicExprAON.cpp  GenLogicExprAON.h  GenLogicExprAOXN.cpp  GenLogicExprAOXN.h  GenNestedFor.cpp  GenNestedFor.h
app/examGenLogic/: GenLogicDiagramAON.cpp  GenLogicDiagramAON.h  GenLogicDiagramAOXN.cpp  GenLogicFactory.cpp  GenLogicFactory.h  GenTwoC.cpp  GenTwoC.h
app/examGenScripts/: test1.exm  test2.exm  test4.exm  testDummyExam3x.exm
app/logger/: Log.cpp  Log.h  Logger.cpp  Logger.h
app/parser/: GeneratorFactory.cpp  GeneratorFactory.h  GenericFactory.h  Parser.cpp  Parser.h  Reader.cpp  Reader.h  Util.cpp  Util.h
app/src/: AppInfo.h  main.cpp
app/src/hcExam/: hcExam01.h  hcExamDummy.h
doc/: Doxyfile
doc/html/: .gitignore
docs/: Doxyfile  MainPage.dox
examGen/: ExcInfo.h  GenAPI.cpp  GenAPI.h  GenCodeText.cpp  GenCodeText.h  GenComposite.cpp  GenComposite.h  GenExam.cpp  GenExam.h  GenExams.cpp  GenExams.h  GenHeader.cpp  GenHeader.h  GenImage.cpp  GenImage.h  GenItem.cpp  GenItem.h  GenLogicDiagramAON.cpp  GenLogicDiagramAON.h  GenLogicDiagramAOXN.cpp  GenLogicDiagramAOXN.h  GenLogicExprAON.cpp  GenLogicExprAON.h  GenNestedFor.cpp  GenNestedFor.h  GenNull.cpp  GenNull.h  GenOption.cpp  GenOption.h  GenOptions.cpp  GenOptions.h  GenRandom.h  GenSelector.cpp  GenSelector.h  GenSolution.cpp  GenSolution.h  GenStem.cpp  GenStem.h  GenText.cpp  GenText.h  (+11 more)
examGenC/: GenLogicExprAON.cpp  GenLogicExprAON.h  GenLogicExprAOXN.cpp  GenLogicExprAOXN.h  GenNestedFor.cpp  GenNestedFor.h
examGenLogic/: GenLogicDiagramAON.cpp  GenLogicDiagramAON.h  GenLogicDiagramAOXN.cpp  GenLogicDiagramAOXN.h  GenTwoC.cpp  GenTwoC.h
examGenScripts/: IntroCprogramming-20181022.exm  test1.exm  test3.exm  testDummyExam.exm
hcExam/: hcExam01.cpp
logger/: ClocksTimers.cpp  ClocksTimers.h  Log.cpp  Log.h  Logger.cpp  Logger.h
parser/: GeneratorFactory.cpp  GeneratorFactory.h  GenericFactory_tmp.h  Parser.cpp  Parser.h  Reader.cpp  Reader.h  Util.cpp  Util.h
src/: AppInfo.h  ExamGeneratorConfig.h  main.cpp
src/hcExam/: hcExam01.cpp  hcExamDummy.cpp
test/: CMakeLists.txt
test/src/: AppInfo.h  ExamGeneratorConfig.h  main.cpp
test/src/hcExam/: hcExam01.cpp  hcExamDummy.cpp
